--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,8 @@
 @using Pocasi.Properties
 @{
     ViewData["Title"] = "Home Page";
-    var isLocationDisplayed = Model.Root != null;
+    var tableLength = Model?.WeatherDisplayItems.Count() ?? 0;
+    var isLocationDisplayed = tableLength != 0;
 }
 
 <div class="search-box@(isLocationDisplayed ? "" : " search-box_big")">
@@ -30,13 +31,12 @@
 <div class="table-container">
     <table class="table">
         @{
-            var tableLength = Model?.Root?.List.Count() ?? 0;
             var now = DateTime.Now;
             for (var i = 0; i < tableLength; i++)
             {
                 <tr class="table-row">
                     <th class="table-cell" style="width:30%; text-align: right;"><time id="@($"time{i}")"></time></th>
-                    <th class="table-cell">@(Model?.Root?.List[i]?.Main?.Temp)°C</th>
+                    <th class="table-cell">@(Model?.WeatherDisplayItems[i]?.Temperatue)°C</th>
                 </tr>
             }
         }
@@ -50,21 +50,13 @@
         window.location.href = "./home?search=" + document.getElementById("location-input").value;
     }
 
-
-    Date.prototype.addHours = function(h) {
-        const oldDay = this.getDate();
-        this.setTime(this.getTime() + (h*60*60*1000));
-        const newDay = this.getDate();
-        return oldDay != newDay;
-    }
-
-    const time = new Date();
-    time.addHours(-3);
+    oldTime = new Date(0)
     @{
         for (var i = 0; i < tableLength; i++)
         {
             <text>
-                newDay = time.addHours(3) || @(i) == 0;
+                time = new Date(@Model?.WeatherDisplayItems[i].Date * 1000);
+                newDay = time.getDate() != oldTime.getDate() || oldTime.getTime() == 0;
                 element = document.getElementById("@($"time{i}")");
                 console.log(newDay);
                 if (newDay){
@@ -82,6 +74,7 @@
                                 minute: "2-digit" }));
                 }
                 element.appendChild(txt);
+                oldTime = time;
             </text>
         }
     }
